--- a/css/C_form.css
+++ b/css/C_form.css
@@ -1,9 +1,14 @@
 body {
     font-family: Arial, sans-serif;
+    /* margin: 50px; */
     background-color: transparent;
 }
 
-/* form {
+.select2-container--open .select2-dropdown {
+  left: -32px;
+  /* margin-top: 33px; */
+}
+form {
     max-width: 1325px;
     margin: auto;
     padding: 20px;
@@ -12,11 +17,11 @@ body {
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
     display: flex;
     flex-wrap: wrap;
-} */
-/* #content{
+}
+#content{
   margin-left:9.5%;
-} */
-/* #form-section{
+}
+#form-section{
 overflow-y: auto;
 width: 80%;
 margin-left:30%;
@@ -26,7 +31,8 @@ margin-left:30%;
 #form-section textarea {
   width: 50%;
     margin-bottom: 10px;
-} */
+    /* margin-left: 10px; */
+}
 h2 {
     width: 100%;
     text-align: center;
@@ -35,12 +41,12 @@ h2 {
     color: #007bff;
 }
 
-/* label {
-    width: calc(50% - 12px);
+label {
+    /* width: calc(50% - 12px); */
     margin-bottom: 12px;
     font-weight: bold;
     color: #333;
-} */
+}
 
 input,
 select {
@@ -53,7 +59,7 @@ select {
     box-sizing: border-box;
 }
 
-/* textarea {
+textarea {
     width: 50%;
     resize: vertical;
     height: 100px;
@@ -62,24 +68,24 @@ select {
     border: 1px solid #ccc;
     border-radius: 4px;
     box-sizing: border-box;
-} */
-/* .submitbtn{
+}
+.submitbtn{
     width: 10%;
     margin:20px auto;
     border-radius: 10px;
-} */
+}
  
 
 
 
 
  /* Additional styling for the buttons */
- /* #button-container {
+ #button-container {
     display: flex;
     margin-left: 43px;
     
-} */
-/* .toggle-button {
+}
+.toggle-button {
     width: 10%;
     font-size: 12px;
     margin: 5% 0  0 0%;
@@ -88,6 +94,7 @@ select {
     background-color: white;
     color: gray;
     cursor: pointer;
+    /* border-radius: 5px; */
     transition: background-color 0.3s;
 }
 
@@ -95,21 +102,22 @@ select {
     background-color: #bbb;
 }
 .toggle-button.selected {
-    color: black; 
-    background-color: #bbb; 
-} */
+    color: black; /* Change text color for selected button */
+    background-color: #bbb; /* Change background color for selected button */
+}
 /* mark area 
 */
 
-/* .markbtn{
+.markbtn{
     width: 100%;
+    /* margin:20px auto; */
     border-radius: 10px;
     color:gray ;
-}  */
-/* .form-paragraph {
+} 
+.form-paragraph {
     display: block;
-} */
-/* .toggle-btn {
+}
+.toggle-btn {
     width: 10%;
     font-size: 12px;
     margin: 2% 0  0 0%;
@@ -118,21 +126,22 @@ select {
     background-color: #bbb;
     color: black;
     cursor: pointer;
+    /* border-radius: 5px; */
     transition: background-color 0.3s;
-} */
+}
 
-/* .toggle-btn:hover {
+.toggle-btn:hover {
     color: white;
 }
 .toggle-btn.selected {
-    color: black; 
-    background-color: #bbb;
-} */
+    color: black; /* Change text color for selected button */
+    background-color: #bbb; /* Change background color for selected button */
+}
 a{
     text-decoration: none;
 }
 
-/* .toggle-btn1 {
+.toggle-btn1 {
     width: 23%;
     height: 40px;
     font-size: 10px;
@@ -141,8 +150,9 @@ a{
     background-color: #bbb;
     color: black;
     cursor: pointer;
+    /* border-radius: 5px; */
     transition: background-color 0.3s;
-} */
+}
 
 
 .popup-container {
@@ -186,6 +196,18 @@ a{
     box-sizing: border-box
 }
 
+body {
+    position: relative;
+    margin: var(--header-height) 0 0 0;
+    padding: 0 1rem;
+    font-family: var(--body-font);
+    font-size: var(--normal-font-size);
+    transition: .5s
+}
+
+a {
+    text-decoration: none
+}
 
 .input-group {
     display: flex;
@@ -222,19 +244,19 @@ a{
     border-radius:5px ;
 }
 
-/* .nav_link:hover {
+.nav_link:hover {
     color: var(--white-color)
-} */
+}
 
 .nav_icon {
     font-size: 1.25rem
 }
 
-/* .show {
+.show {
     left: 0
-} */
+}
 
-/* 
+
 .active {
     color: var(--white-color)
 }
@@ -250,14 +272,15 @@ a{
 
 .height-100 {
     height: 100vh
-} */
+}
 
 
-/* @media screen and (min-width: 768px) { */
-    /* body {
+@media screen and (min-width: 768px) {
+    body {
         margin: calc(var(--header-height) + 1rem) 0 0 0;
-    } */
-/* 
+        /* padding-left: calc(var(--nav-width) + 2rem) */
+    }
+
     .header {
         height: calc(var(--header-height) + 1rem);
         padding: 0 2rem 0 calc(var(--nav-width) + 2rem)
@@ -284,25 +307,25 @@ a{
     }
 
     
-} */
+}
 
 /* subdropdown css */
 /* .dropdown-menu {
-    position: relative;
+    position: ;
 } */
 
-/* .sub-dropdown-menu {
+.sub-dropdown-menu {
     display: none;
     position: absolute;
     top: 0;
     left: 0;
-    min-width: 120px; 
+    min-width: 120px; /* Adjust width as needed */
     background-color: #fff;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
-    z-index: 1000; 
-} */
+    z-index: 1000; /* Ensure it's above other elements */
+}
 
-/* .dropdown-menu li:hover .sub-dropdown-menu {
+.dropdown-menu li:hover .sub-dropdown-menu {
     display: block;
 }
 
@@ -315,7 +338,7 @@ a{
 
 .sub-dropdown-menu li:hover {
     background-color: #f0f0f0;
-} */
+}
 
 /* popup */
 .custom-modal-class {
@@ -718,6 +741,7 @@ a{
     position: relative;
     top: 70px;
     left: -3px;
+    border: 2px solid #383899;
 }
 
  
@@ -729,23 +753,27 @@ a{
       top: 0;
     }
 
-    .leaflet-control-layers-list {
-      width: 200px;
+    .leaflet-control-layers-list{
+      width: 150px;
       height: 200px;
       overflow-y: scroll;
       scrollbar-width: thin;
       font-size: 9px;
       padding: 0px;
-
+      color: darkblue;
+      
     }
-
+    /* .leaflet-control-layers-list {
+      color: darkblue;
+  } */
+   
     .leaflet-control-layers-overlays {
       width: 100%;
     }
 
     #map {
     top: 0px;
-    left: 0;
+    left: -12%;
     height: 100vh;
     width: 100vw;
     z-index: 0;
@@ -795,13 +823,14 @@ a{
       width: 0;
       position: fixed;
       z-index: 1;
-      left: 20px;
+      left: 70px;
       background-color: #f3f3f3;
       overflow-x: hidden;
       transition: 0s;
       padding-top: 10px;
       overflow-y: scroll;
       border-radius: 10px;
+      border-color: #383899;
       box-shadow: 0 0 10px rgba(0, 0, 0, 0.7);
       color: darkblue;
       font-weight: bold;
@@ -862,7 +891,7 @@ a{
       left: 30px;
       right: 30px;
     }
- 
+
     @media screen and (max-height: 450px) {
       .sidebar {
         padding-top: 15px;
@@ -877,7 +906,7 @@ a{
       position: sticky;
       top: 0;
       z-index: 1;
-    } 
+    }
 
     
 #paginationControls button {
@@ -903,7 +932,7 @@ a{
   right: 0.8%;
   background-color: white;
   border-radius: 10px;
-  border: 2px solid #bbb;
+  border: 2px solid #383899;
 
 }
 
@@ -993,7 +1022,11 @@ button, input, optgroup, select, textarea {
       /* padding: 5px; */
     
       }
-    
+      /* .popup-table td {
+        border-right: 1px solid; 
+        padding: 7px;
+        vertical-align: middle;
+      } */
 
       .leaflet-popup-content {
         margin: 13px 24px 13px 20px;
@@ -1014,34 +1047,54 @@ button, input, optgroup, select, textarea {
         background-color: white;
         border: 1px solid #aaa;
         border-radius: 4px;
-        cursor: text;
+        /* cursor: text; */
         padding-bottom: 5px;
         padding-right: 5px;
         position: relative;
-        margin-left: -33px;
+        margin-left: -32px;
+        margin-right: -7px;
     }
     .select2-container--open .select2-dropdown {
       left: -32px;
-      }
-      .accordion-header {
-        margin-bottom: 0;
-        margin-top: 2px;
-    }
-    .popup-table tr td:not(:last-child) {
-      border-right: 1px solid ; 
-      padding: 7px;
+      width: 140px !important;;
+  }
+  .accordion-header {
+    margin-bottom: 0;
+    margin-top: 2px;
+}
+.popup-table tr td:not(:last-child) {
+  border-right: 1px solid ; 
+  padding: 7px;
 
-    }
+}
 
 
 
 /* accordation */
 
 .accordion {
-  
+  --bs-accordion-color: var(--bs-body-color);
+  --bs-accordion-bg: var(--bs-body-bg);
+  --bs-accordion-transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out, border-radius 0.15s ease;
+  --bs-accordion-border-color: var(--bs-border-color);
+  --bs-accordion-border-width: var(--bs-border-width);
+  --bs-accordion-border-radius: var(--bs-border-radius);
+  --bs-accordion-inner-border-radius: calc(var(--bs-border-radius) - (var(--bs-border-width)));
+  --bs-accordion-btn-padding-x: 1.25rem;
+  --bs-accordion-btn-padding-y: 1rem;
+  --bs-accordion-btn-color: var(--bs-body-color);
+  --bs-accordion-btn-bg: var(--bs-accordion-bg);
   --bs-accordion-btn-icon: url(data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23212529'%3e%3cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e);
   --bs-accordion-btn-icon-width: 0.75rem;
- 
+  --bs-accordion-btn-icon-transform: rotate(-180deg);
+  --bs-accordion-btn-icon-transition: transform 0.2s ease-in-out;
+  --bs-accordion-btn-active-icon: url(data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23052c65'%3e%3cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e);
+  --bs-accordion-btn-focus-border-color: #00008b;
+  --bs-accordion-btn-focus-box-shadow: 0 0 0 0.25rem rgba(13, 110, 253, 0.25);
+  --bs-accordion-body-padding-x: 1.25rem;
+  --bs-accordion-body-padding-y: 1rem;
+  --bs-accordion-active-color: var(--bs-primary-text-emphasis);
+  --bs-accordion-active-bg: var(--bs-primary-bg-subtle);
 }
 
 .accordion-button {
@@ -1054,9 +1107,17 @@ button, input, optgroup, select, textarea {
 }
 /*mobile view */
 @media screen and (max-width: 767px) {
+  .leaflet-control-layers-list {
+    width: 100px;
+    height: 200px;
+    overflow-y: scroll;
+    scrollbar-width: thin;
+    font-size: 9px;
+    padding: 0px;
+}
   .leaflet-touch .leaflet-control-layers, .leaflet-touch .leaflet-bar {
     /* width: 100px; */
-    border: 2px solid rgba(0, 0, 0, 0.2);
+    border: 2px solid #383899;
     background-clip: padding-box;
 }
   .tablestats {
@@ -1090,7 +1151,7 @@ button, input, optgroup, select, textarea {
 .input-group #searchInputDashboard {
   height: 30px;
   border-radius: 10px;
-  width: 120px;
+  width: 112px;
 }
 .input-group {
   position: relative;
@@ -1113,7 +1174,9 @@ button, input, optgroup, select, textarea {
   position: absolute;
   z-index: 9999;
   top: 30%;
+  right: 20%;
   left: -4%;
+  border: 2px solid #383899;
 }
 .leaflet-touch .geocoder-control-input {
   height: 30px;
@@ -1122,6 +1185,7 @@ button, input, optgroup, select, textarea {
   position: relative;
   top: 45px;
   left: -3px;
+  border: 2px solid #383899;
 }
 .filter {
   position: absolute;
@@ -1130,8 +1194,9 @@ button, input, optgroup, select, textarea {
   background-color: white;
   padding: 3px 4px;
   top: 16%;
-  left: 8px;
-  border: 2px solid #bbb;
+  left: 3%;
+  border: 2px solid #383899;
+  /* border: 2px solid #bbb; */
   border-radius: 5px;
 }
 #openTableBtn {
@@ -1144,7 +1209,8 @@ button, input, optgroup, select, textarea {
   right: 0.8%;
   background-color: white;
   border-radius: 10px;
-  border: 2px solid #bbb;
+  border: 2px solid #383899;
+
 }
 .form-select {
   --bs-form-select-bg-img: url(data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'%3e%3cpath fill='none' stroke='%23343a40' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='m2 5 6 6 6-6'/%3e%3c/svg%3e);
@@ -1168,10 +1234,10 @@ button, input, optgroup, select, textarea {
   transition: border-color .15s ease-in-out, box-shadow .15s ease-in-out;
 }
 .form-control{
-  height: 3px;
+  /* height: 3px; */
   width: 100px;
- border-radius: 10px;
- border: 2px solid darkblue;
+ /* border-radius: 10px; */
+ /* border: 2px solid darkblue; */
 }
 .leaflet-touch .leaflet-control-layers-toggle {
   width: 35px;
@@ -1186,9 +1252,9 @@ button, input, optgroup, select, textarea {
     color: var(--first-color-dark);
     background-color: white;
     padding: 3px 4px;
-    top: 15%;
-    left: 4px;
-    border: 2px solid #bbb;
+    top: 16%;
+    left: 8px;
+    border: 2px solid #383899;
     border-radius: 5px;
   }
   .logopng {
@@ -1201,7 +1267,8 @@ button, input, optgroup, select, textarea {
     position: absolute;
     z-index: 9999;
     top: 30%;
-    left: -4%;
+    left: -2%;
+    border: 2px solid #383899;
 }
 .leaflet-touch .geocoder-control-input {
   height: 30px;
@@ -1209,11 +1276,14 @@ button, input, optgroup, select, textarea {
   background-size: 30px;
   position: relative;
   top: 55px;
-  left: -3px;
+  left: 1px;
+  border: 2px solid #383899;
 }
 .leaflet-touch .leaflet-control-layers-toggle {
-  width: 44px;
-  height: 44px;
+  width: 35px;
+  height: 35px;
+  /* border: 2px solid #383899;     */
+
 }
 .input-group .form-select, .input-group .form-control, .input-group .btn {
   margin-right: 5px;
@@ -1232,11 +1302,10 @@ button, input, optgroup, select, textarea {
   color: #04c;
   font-size: 100%;
   /* background-color: rgba(173, 216, 230, 0.5); */
- background-color: #c8d7abd4;
-   font-weight: bold;
-  
+  background-color: #c8d7ab70;
+  font-weight: bold;
   top: 2%;
-  right:15%;
+  right:18%;
   padding: 3px;
   border-radius: 5px 5px;
   z-index: 9999;
@@ -1244,6 +1313,19 @@ button, input, optgroup, select, textarea {
   text-transform: uppercase;
 
 }
+.leaflet-right .leaflet-control {
+  margin-right: 10px;
+  border: 2px solid #383899;
+}
+
+
+}
+
+ul.select2-results__options{
+  width: 138px;
+}
+ul.select2-results__options li{
+  border :1px solid grey;
 }
 
   
