--- a/css/C_form.css
+++ b/css/C_form.css
@@ -4,6 +4,7 @@ body {
     background-color: transparent;
 }
 
+
 .select2-container--open .select2-dropdown {
   left: -32px;
   /* margin-top: 33px; */
@@ -579,7 +580,7 @@ a {
     width: 570px;
     height: 500px;
     bottom: 310px;
-    left: 60%;
+    left: 49%;
     top:20%;
     max-height: 300px; 
     background-color: #fff;
@@ -914,18 +915,26 @@ a {
       top: 0;
       z-index: 1;
     }
-
+    #paginationControls button {
+      background-color: transparent;
+      color: darkblue;
+      font-size: 15px;
+      /* height: 25px; */
+      margin-top: -10px;
+      margin-right: 22px;
+  }
     
-#paginationControls button {
+/* #paginationControls button {
   background-color: transparent;
   color: darkblue;
   font-size: 15px;
   height: 25px;
-}
+  margin-right: 20px;
+} */
 
 #paginationControls  p{
   font-size: 10px;
-  margin-top: 11px;
+  /* margin-top: -15px; */
   /* bottom: 0; */
 }
 
