--- a/css/style.css
+++ b/css/style.css
@@ -524,24 +524,22 @@ top: 0px;
 } */
 
 
-#save-button {
+#save-button{
   /* border: 2px solid rgb(187, 187, 187); */
   border-radius: 0;
   background-color: white;
   color: black;
-  padding: 6px;
+  padding: 7px;
   display: none;
   position: absolute;
   border: 2px solid darkblue;
-  /* border-top: none; */
+  border-top:none ;
   border-bottom: none;
   /* top: -70px; */
   top: -36px;
 
   left: 55.3px;
   font-size: 15px;
-  height: 29px;
-  width: 29px;
   border-bottom: none;
 }
 .delete-button{
@@ -589,16 +587,7 @@ top: 0px;
       left: 56px;
       border:2px solid darkblue;
       
-}
-.leaflet-touch .geocoder-control-input {
-  height: 30px;
-  line-height: 30px;
-  background-size: 30px;
-  width: 30px; 
-}
-
-.leaflet-touch .geocoder-control-input:focus {
-  width: 300px; 
+  
 }
 
 
@@ -611,13 +600,14 @@ top: 0px;
 
 } */
 
-/* .leaflet-touch .geocoder-control-input {
+.leaflet-touch .geocoder-control-input {
   height: 30px;
   line-height: 30px;
   background-size: 30px;
+  border: 2px solid darkblue;
   width: 30px; 
 }
 
 .leaflet-touch .geocoder-control-input:focus {
   width: 300px; 
-} */
+}
