--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,6 @@
   box-sizing: border-box;
 }
 
-
 #map {
   top: 0px;
   left: 0px;
@@ -13,14 +12,9 @@
   z-index: 1;
 }
 
-
-
 .leaflet-container .leaflet-control-attribution {
-
   display: none;
 }
-
-
 
 .leaflet-control-zoom {
   position: absolute;
@@ -29,18 +23,16 @@
   border: 2px solid darkblue;
 }
 
-.leaflet-touch .leaflet-control-layers, .leaflet-touch .leaflet-bar {
-
-background-clip: padding-box;
-border: 2px solid darkblue;
-
+.leaflet-touch .leaflet-control-layers,
+.leaflet-touch .leaflet-bar {
+  background-clip: padding-box;
+  border: 2px solid darkblue;
 }
 
 a {
   text-decoration: none;
   color: white;
 }
-
 
 .leaflet-div-icon {
   margin-left: -10px;
@@ -50,18 +42,16 @@ a {
   transform: translate3d(573px, 79px, 0px);
   z-index: 4079;
   background-color: red;
- 
 }
 
 .leaflet-draw-edit-marker .leaflet-marker-icon {
-  width: 2px; 
-  height: 2px; 
+  width: 2px;
+  height: 2px;
   background-color: red;
 }
 
-
 .leaflet-control-scale-line {
-  font-size:15px; /* Adjust the font size as needed */
+  font-size: 15px; /* Adjust the font size as needed */
 }
 
 #table-container {
@@ -69,13 +59,13 @@ a {
   display: none;
   position: absolute;
   width: 30%;
-  height:40%;
+  height: 40%;
   top: 55%;
   right: 1%;
   overflow: scroll;
   scrollbar-width: thin;
   z-index: 9999;
- transition: 0s;
+  transition: 0s;
 }
 
 /* 
@@ -118,7 +108,6 @@ a {
 .ui-widget.ui-widget-content {
   border: 1px solid #c5c5c5;
 
-
   z-index: 99999;
 }
 
@@ -156,47 +145,45 @@ a {
 }
 
 .leaflet-control-scale-line {
-  font-size:10px; /* Adjust the font size as needed */
+  font-size: 10px; /* Adjust the font size as needed */
 }
 
-
-
-    .swal2-show {
-    animation: swal2-show 0.3s ease; /* Set the transition with ease */
-  }
-
-  .swal2-hide {
-    animation: swal2-hide 0.3s ease; /* Set the transition with ease */
-  }
-
-  @keyframes swal2-show {
-    from {
-      opacity: 0;
-      transform: scale(0.8);
-    }
-    to {
-      opacity: 1;
-      transform: scale(1);
-    }
-  }
-
-  @keyframes swal2-hide {
-    from {
-      opacity: 1;
-      transform: scale(1);
-    }
-    to {
-      opacity: 0;
-      transform: scale(0.8);
-    }
-  }
-  .leaflet-touch .leaflet-control-layers-toggle {
-    width: 44px;
-    height: 44px;
-    border: 2px solid darkblue;
-    border-radius: 5px;
+.swal2-show {
+  animation: swal2-show 0.3s ease; /* Set the transition with ease */
 }
-.leaflet-control-layers-list{
+
+.swal2-hide {
+  animation: swal2-hide 0.3s ease; /* Set the transition with ease */
+}
+
+@keyframes swal2-show {
+  from {
+    opacity: 0;
+    transform: scale(0.8);
+  }
+  to {
+    opacity: 1;
+    transform: scale(1);
+  }
+}
+
+@keyframes swal2-hide {
+  from {
+    opacity: 1;
+    transform: scale(1);
+  }
+  to {
+    opacity: 0;
+    transform: scale(0.8);
+  }
+}
+.leaflet-touch .leaflet-control-layers-toggle {
+  width: 44px;
+  height: 44px;
+  border: 2px solid darkblue;
+  border-radius: 5px;
+}
+.leaflet-control-layers-list {
   width: 150px;
   height: 200px;
   overflow-y: scroll;
@@ -204,63 +191,58 @@ a {
   font-size: 9px;
   padding: 0px;
   color: darkblue;
-  
 }
-.leaflet-control-layers-overlays{
+.leaflet-control-layers-overlays {
   width: 100%;
-
 }
-
 
 .custom-close-button-class:hover {
-/* Add your custom hover styles for the close button here */
-background-color: #d32f2f; /* Darker red background color on hover */
+  /* Add your custom hover styles for the close button here */
+  background-color: #d32f2f; /* Darker red background color on hover */
 }
-    .swal2-show {
-    animation: swal2-show 0.3s ease; /* Set the transition with ease */
-  }
+.swal2-show {
+  animation: swal2-show 0.3s ease; /* Set the transition with ease */
+}
 
-  .swal2-hide {
-    animation: swal2-hide 0.3s ease; /* Set the transition with ease */
-  }
+.swal2-hide {
+  animation: swal2-hide 0.3s ease; /* Set the transition with ease */
+}
 
-  @keyframes swal2-show {
-    from {
-      opacity: 0;
-      transform: scale(0.8);
-    }
-    to {
-      opacity: 1;
-      transform: scale(1);
-    }
+@keyframes swal2-show {
+  from {
+    opacity: 0;
+    transform: scale(0.8);
   }
+  to {
+    opacity: 1;
+    transform: scale(1);
+  }
+}
 
-  @keyframes swal2-hide {
-    from {
-      opacity: 1;
-      transform: scale(1);
-    }
-    to {
-      opacity: 0;
-      transform: scale(0.8);
-    }
+@keyframes swal2-hide {
+  from {
+    opacity: 1;
+    transform: scale(1);
   }
-  .leaflet-touch .geocoder-control {
-    z-index: 9999999;
-    position: absolute;
-    top: 60px;
-    left:5px;
-    padding: 10px;
-   
-  
+  to {
+    opacity: 0;
+    transform: scale(0.8);
   }
-  .leaflet-touch .geocoder-control-input {
-    height: 35px;
-    width: 35px;
-    line-height: 30px;
-    background-size: 30px;
-    left: -5px;
-    border: 2px solid darkblue;
+}
+.leaflet-touch .geocoder-control {
+  z-index: 9999999;
+  position: absolute;
+  top: 60px;
+  left: 5px;
+  padding: 10px;
+}
+.leaflet-touch .geocoder-control-input {
+  height: 35px;
+  width: 35px;
+  line-height: 30px;
+  background-size: 30px;
+  left: -5px;
+  border: 2px solid darkblue;
 }
 
 /* 
@@ -268,7 +250,8 @@ background-color: #d32f2f; /* Darker red background color on hover */
 border: 2px solid darkblue;
 } */
 
-.leaflet-touch .leaflet-control-layers, .leaflet-touch .leaflet-bar {
+.leaflet-touch .leaflet-control-layers,
+.leaflet-touch .leaflet-bar {
   border: 2px solid darkblue;
   background-clip: padding-box;
 }
@@ -276,7 +259,6 @@ border: 2px solid darkblue;
 /* .leaflet-touch .geocoder-control-suggestions {
   top: 100px
 } */
-
 
 .leaflet-right {
   right: 0;
@@ -287,11 +269,9 @@ border: 2px solid darkblue;
 .leaflet-right .leaflet-control {
   position: relative;
   margin-right: 10px;
-  top:0px;
+  top: 0px;
   border: 2px solid darkblue;
 }
-
-
 
 #workTableDashboard {
   position: relative;
@@ -299,44 +279,34 @@ border: 2px solid darkblue;
   pointer-events: visiblePainted;
   pointer-events: auto;
   /* top: -4px; */
-}   */ 
-
-
-
- 
-#workTableDashboard {
+}
+*/ #workTableDashboard {
   position: relative;
 }
- 
 
-
-
-.pagibtn{
+.pagibtn {
   margin: 0 5px;
   background-color: transparent;
   color: #007bff;
 }
-.pagibtn:hover{
-  
+.pagibtn:hover {
   background-color: transparent;
   color: #007bff;
 }
 
-
-
-.logopng1{
+.logopng1 {
   height: 50px;
-  width:50px;
+  width: 50px;
   /* border: 2px solid darkblue; */
   border-radius: 10px;
   /* background-color: white; */
   padding: 5px;
- position: absolute;
- z-index: 9999;
- top: 2%;
- left: 0.5%;
+  position: absolute;
+  z-index: 9999;
+  top: 2%;
+  left: 0.5%;
 }
-.geopulseaname{
+.geopulseaname {
   color: darkblue;
   /* border:2px solid darkblue; */
   position: absolute;
@@ -348,95 +318,97 @@ border: 2px solid darkblue;
   font-size: 10px;
 }
 
-
-
 /* popup */
 
-
-  /* .popup-table td {
+/* .popup-table td {
     border-right: 1px solid; 
     padding: 7px;
     vertical-align: middle;
   } */
 
-  .leaflet-popup-content {
-    margin: 13px 24px 13px 20px;
-    line-height: 1.3;
-    font-size: 10px;
-    font-size: 1.08333em;
-    min-height: 1px;
-    width: 240px;
-    height: 200px;
-    overflow: scroll;
-    scrollbar-width: thin;
-  }
+.leaflet-popup-content {
+  margin: 13px 24px 13px 20px;
+  line-height: 1.3;
+  font-size: 10px;
+  font-size: 1.08333em;
+  min-height: 1px;
+  width: 240px;
+  height: 200px;
+  overflow: scroll;
+  scrollbar-width: thin;
+}
 
-
-  /* .leaflet-popup-content strong{
+/* .leaflet-popup-content strong{
 padding: 5px;
   } */
-  tbody, td, tfoot, th, thead, tr {
-    border-color: inherit;
-    border-style: solid;
-    border-width: 0;
-    font-size: 10px;
-  }
-  .popup-table tr,td{
-    border-bottom: 1px solid;
-    /* padding: 5px; */
-  
-    }
+tbody,
+td,
+tfoot,
+th,
+thead,
+tr {
+  border-color: inherit;
+  border-style: solid;
+  border-width: 0;
+  font-size: 10px;
+}
+.popup-table tr,
+td {
+  border-bottom: 1px solid;
+  /* padding: 5px; */
+}
 
+/* save popup */
 
-    /* save popup */
+.my-custom-popup {
+  width: 10%; /* Adjust width */
+  min-height: 100px; /* Adjust minimum height */
+}
 
-    .my-custom-popup {
-      width: 10%; /* Adjust width */
-      min-height: 100px; /* Adjust minimum height */
-    }
-    
-    /* Custom class for the popup title */
-    .my-custom-title {
-      font-size: 14px; /* Adjust font size for the title */
-      font-weight: bold;
-      text-align: center;
-    }
-    
-    /* Custom class for the popup text/content */
-    .my-custom-text {
-      font-size: 12px; /* Adjust font size for the text */
-      text-align: center;
-    }
-    .swal2-popup {
-      display: none;
-      position: relative;
-      box-sizing: border-box;
-      flex-direction: column;
-      justify-content: center;
-      /* width: 24em; */
-      /* max-width: 30%; */
-      /* padding: 1.25em; */
-      border: none;
-      border-radius: 5px;
-      background: #fff;
-      font-family: inherit;
-      font-size: 10px;
-  }
+/* Custom class for the popup title */
+.my-custom-title {
+  font-size: 14px; /* Adjust font size for the title */
+  font-weight: bold;
+  text-align: center;
+}
+
+/* Custom class for the popup text/content */
+.my-custom-text {
+  font-size: 12px; /* Adjust font size for the text */
+  text-align: center;
+}
+.swal2-popup {
+  display: none;
+  position: relative;
+  box-sizing: border-box;
+  flex-direction: column;
+  justify-content: center;
+  /* width: 24em; */
+  /* max-width: 30%; */
+  /* padding: 1.25em; */
+  border: none;
+  border-radius: 5px;
+  background: #fff;
+  font-family: inherit;
+  font-size: 10px;
+}
 
 .custom-button {
   width: auto;
-  padding: 5px 5px;
+  padding: px 5px;
   background-color: #fff;
   color: darkblue;
   font-weight: bold;
+  font-size: 10px !important;
   border: 2px solid darkblue;
   border-radius: 5px !important;
   cursor: pointer;
-  position: absolute;
-  /* top: -140px; */
-  top:-10px;
-  left: 0px;
-  
+  /* position: absolute; */
+  top: 476px !important;
+  left: 733px !important;
+  height: 37px !important;
+  width: 37px !important;
+
   transition: background-color 0.1s;
 }
 
@@ -444,58 +416,57 @@ padding: 5px;
   background-color: #bbb;
 }
 #saveDataButton {
-  border: 2px solid darkblue;
-  border-bottom: none;
-  border-top: none;
-  border-radius: 0px;
+  border: 2px solid #2b13bb;
+  border-bottom: 2px solid #2b13bb;
+  border-top: 2px solid #2b13bb;
+  border-radius: 5px 5px 5px 5px;
   background-color: white;
   position: fixed;
   color: black;
   padding: 0px 5px;
   display: none;
-  top: 23%;
+  top: 683px;
   font-size: 19px;
-  
-  left: 5%;
+  height: 37px;
+  width: 37px;
+  left: 880px;
 }
 
-#deleteFeatureButton{
- 
-  
-  border: 2px solid darkblue;
-  border-top: none;
-  border-radius: 0 0 5px 5px;
+#deleteFeatureButton {
+  border: 2px solid #2b13bb;
+  border-top: 2px solid #2b13bb;
+  border-radius: 5px 5px 5px 5px;
   background-color: white;
   color: black;
   padding: 3px 7px;
   display: none;
   position: fixed;
-  top: 26.5%;
+  top: 683px;
   font-size: 15px;
-  left: 5%;
-
+  height: 37px;
+  width: 37px;
+  left: 925px;
 }
 
-#editFeatureButton{
-  border: 2px solid darkblue;
-  border-radius: 5px 5px 0 0;
-  height: 30px;
-  width: 30px;
+#editFeatureButton {
+  border: 2px solid #2b13bb;
+  border-radius: 5px 5px 5px 5px;
+  height: 37px;
+  width: 37px;
   display: none;
   position: fixed;
-  top: 19%;
-  left: 5%;
+  top: 683px;
+  left: 838px;
   padding: 5px;
   background: white;
-  border-bottom: none;
+  border-bottom: 2px solid #2b13bb;
 }
 
-
-.leaflet-draw-draw-polyline{
+.leaflet-draw-draw-polyline {
   top: -276px;
   position: absolute;
   left: 56px;
-  border: 2px solid darkblue;
+  border: 2px solid #2b13bb;
   /* border-radius: 5px */
 }
 
@@ -510,10 +481,15 @@ padding: 5px;
   width: 30px;
 }
 
-
+.leaflet-draw-draw-polyline {
+  top: 250px;
+  left: 550px;
+  /* bottom: 4px; */
+  border: 2px solid #2b13bb;
+  border-bottom: 2px solid #2b13bb;
+}
 
 /* style="border:2px solid #bbb;  border-radius:5px; background-color:green; color:white; padding: 5px ; display:none" */
-
 
 /* trace */
 /* .leaflet-control .leaflet-bar{
@@ -523,73 +499,68 @@ border: 2px solid darkblue;
 top: 0px;
 } */
 
-
-#save-button{
+#save-button {
   /* border: 2px solid rgb(187, 187, 187); */
-  border-radius: 0;
+  border-radius: 5px 5px 5px 5px;
   background-color: white;
   color: black;
   padding: 7px;
   display: none;
   position: absolute;
-  border: 2px solid darkblue;
-  border-top:none ;
-  border-bottom: none;
-  /* top: -70px; */
-  top: -36px;
-
-  left: 55.3px;
+  border: 2px solid #2b13bb;
+  border-top: 2px solid #2b13bb;
+  border-bottom: 2px solid #2b13bb;
+  top: 543px;
+  height: 37px;
+  width: 37px;
+  left: 638px;
   font-size: 15px;
-  border-bottom: none;
+  border-bottom: 2px solid #2b13bb;
 }
-.delete-button{
-  border: 2px solid darkblue;
-  padding:6px 7.3px;
+.delete-button {
+  border: 2px solid #2b13bb;
+  padding: 6px 7.3px;
   font-size: 14px;
-  border-radius: 0px 0px 5px 5px;
+  border-radius: 5px 5px 5px 5px;
   display: block;
   background-color: white;
   color: black;
   cursor: pointer;
-  left: 54px;
+  left: 545px;
   position: absolute;
-  /* top: -92px; */
-  top: -59px;
+  top: 487px;
+  height: 37px;
+  width: 37px;
 
   display: none;
-  border-top: none
-
+  border-top: 2px solid #2b13bb;
 }
 
-.leaflet-control-edit-interior{
+.leaflet-control-edit-interior {
   font-size: 15px;
   position: absolute;
-  /* top: -138px; */
-  top: -104px;
+  height: 37px !important;
+  width: 37px !important;
+  top: 500px;
 
-  border: 2px solid darkblue;
-  border-radius: 5px 5px 0 0;
-  display: none;
-  left: 54px;
-  border-bottom: none;
+
+  border: 2px solid #2b13bb;
+  border-radius: 5px 5px 5px 5px !important;
+  display: none !important;
+  left: 590px;
+  border-bottom: 2px solid #2b13bb !important;
 }
-
-
 
 /* polygon leaflet css */
 
-.leaflet-draw-draw-polygon{
-  
-    position: absolute;
-      /* top: -170px; */
-  top: -217px;
+.leaflet-draw-draw-polygon {
+  position: fixed !important;
 
-      left: 56px;
-      border:2px solid darkblue;
-      
-  
+  top: 684px !important;
+
+  left: 506px !important;
+  border: 2px solid darkblue;
 }
-
 
 /* .leaflet-draw-draw-circlemarker{
   
@@ -605,9 +576,16 @@ top: 0px;
   line-height: 30px;
   background-size: 30px;
   border: 2px solid darkblue;
-  width: 30px; 
+  width: 30px;
 }
 
 .leaflet-touch .geocoder-control-input:focus {
-  width: 300px; 
+  width: 300px;
 }
+/* .custom-button {
+left: 650px;
+height: 37px;
+width: 37px;
+
+
+} */
