--- a/css/C_form.css
+++ b/css/C_form.css
@@ -470,26 +470,25 @@ a {
   width: 20px;
   height: 20px;
 }
-
+/* 
 .logopng1 {
   height: 50px;
   width: 50px;
   border: 2px solid #bbb;
   border-radius: 10px;
-  background-color: white;
   padding: 5px;
   position: absolute;
   z-index: 9999;
   top: 2%;
   left: 0.5%;
-}
+} */
 
 .logopng {
   height: 50px;
   width: 50px;
-  border: 2px solid #bbb;
+  /* border: 2px solid #bbb; */
   border-radius: 10px;
-  background-color: white;
+  /* background-color: white; */
   padding: 5px;
   position: absolute;
   z-index: 9999;
@@ -1215,7 +1214,7 @@ button {
   top: 30%;
   right: 20%;
   left: -4%;
-  border: 2px solid #383899;
+  /* border: 2px solid #383899; */
 }
 .leaflet-touch .geocoder-control-input {
   height: 30px;
