--- a/css/style.css
+++ b/css/style.css
@@ -396,7 +396,7 @@ td {
 
 .custom-button {
   width: auto;
-  padding: px 5px;
+  padding: 1px 2px;
   background-color: #fff;
   /* color: darkblue; */
   font-weight: bold;
