--- a/css/C_form.css
+++ b/css/C_form.css
@@ -1234,18 +1234,18 @@ button {
   /* border: 2px solid #bbb; */
   border-radius: 5px;
 }
-#openTableBtn {
+/* #openTableBtn {
   position: fixed;
   z-index: 9999;
   top: 76%;
   width: auto;
   padding: 5px;
-  /* height: 5.5%; */
+  
   right: 0.8%;
   background-color: white;
   border-radius: 10px;
   border: 2px solid #383899;
-}
+} */
 .form-select {
   --bs-form-select-bg-img: url(
     data:image/svg + xml,
