--- a/css/C_form.css
+++ b/css/C_form.css
@@ -396,15 +396,15 @@ a {
   font-size: 20px;
 }
 .custom-icon-class {
-  font-size: 10px; /* Set your desired icon size */
+  font-size: 10px; 
 }
 
 .custom-title-class {
-  font-size: 1.5em; /* Set your desired title size */
+  font-size: 1.5em; 
 }
 
 .custom-text-class {
-  font-size: 1em; /* Set your desired text size */
+  font-size: 1em; 
 }
 .custom-close-button-class {
   background-color: #f44336;
@@ -419,15 +419,14 @@ a {
 }
 
 .custom-close-button-class:hover {
-  /* Add your custom hover styles for the close button here */
-  background-color: #d32f2f; /* Darker red background color on hover */
+  background-color: #d32f2f; 
 }
 .swal2-show {
-  animation: swal2-show 0.3s ease; /* Set the transition with ease */
+  animation: swal2-show 0.3s ease; 
 }
 
 .swal2-hide {
-  animation: swal2-hide 0.3s ease; /* Set the transition with ease */
+  animation: swal2-hide 0.3s ease; 
 }
 
 @keyframes swal2-show {
@@ -459,11 +458,9 @@ a {
 #fetchDataButton {
   width: 200px;
   margin-top: -10px;
-  /* margin-right: -30; */
 }
 
 .tablebtn {
-  /* padding: 5px; */
   width: 20px;
   height: 20px;
 }
@@ -472,9 +469,7 @@ a {
 .logopng {
   height: 50px;
   width: 50px;
-  /* border: 2px solid #bbb; */
   border-radius: 10px;
-  /* background-color: white; */
   padding: 5px;
   position: absolute;
   z-index: 9999;
