--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -2,7 +2,7 @@
 body {
     font-family: Arial, sans-serif;
     margin: 0;
-    overflow: hidden;
+    overflow-x: hidden;
     /* padding: 10px; */
     background-color: #e8f5e9;
 }
@@ -45,6 +45,7 @@ body {
 }
 
 #map {
+    position: relative;
     width: 98vw;
     height: 100vh;
     border: 1px solid #ccc;
@@ -154,4 +155,13 @@ body {
     /* padding: 5px; */
     width: 20px;
     height: 20px;
+  }
+
+
+  #table-container-dashboard{
+    position: absolute;
+    transition: 0s;
+    top: 50;
+    z-index: 999;
+    width: 500px;
   }
