--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -7,12 +7,12 @@ body {
     background-color: #e8f5e9;
 }
 
-.container {  
+
+/* .container {  
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 20px;
-}
+} */
 
 .search-bar {
     display: flex;
